--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,13 +6,13 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>{{ site.data.main_info.name }} | {{ page.title }}</title>
-  <meta name="description" content="Kunho Kim">
-  <meta name="author" content="Kunho Kim">
-  <meta property="og:title" content="Kunho Kim" />
+  <meta name="description" content="Jinho Park">
+  <meta name="author" content="Jinho Park">
+  <meta property="og:title" content="Jinho Park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="http://https://soulmates2.github.io/CV/" />
-  <meta property="og:site_name" content="Kunho Kim" />
-  <link rel="canonical" href="http://https://soulmates2.github.io/CV/" />
+  <meta property="og:url" content="http://https://jinhopark-ai.github.io/CV/" />
+  <meta property="og:site_name" content="Jinho Park" />
+  <link rel="canonical" href="http://https://jinhopark-ai.github.io/CV/" />
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -21,6 +21,8 @@
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href='https://fonts.googleapis.com/css?family=Raleway:400,300,600' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CRoboto:400,400italic,700%7CRoboto+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic" rel="stylesheet" type="text/css">
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
