--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,8 +58,8 @@
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link rel="icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}>
-  <link rel="shortcut icon" type="image/png" href={{ "/libs/icon.png" | prepend: site.baseurl }}>
+  <link rel="icon" type="image/png" href={{ "/libs/kaist.ico" | prepend: site.baseurl }}>
+  <link rel="shortcut icon" type="image/png" href={{ "/libs/kaist.ico" | prepend: site.baseurl }}>
 
 </head>
 <body>
